# c2023-a

./: .gitignore  01_running_letter.cpp  02_is_prime.cpp  03_all_prime.cpp  04_goldbach.cpp  05_encrypt_decrypt.cpp  06_hanoi.cpp  07_maze.cpp  08_push_boxes.cpp  09_linked_list.cpp  10_warehouse.cpp  AI五子棋实验报告.docx  CMakeLists.txt  GameTree.cpp  GameTree.h  README.md  aigo.c  basic.cpp  draw.cpp  draw.h  main.cpp  play.cpp  play.h  score.txt  test.cpp  test.h  vcpkg.json  五子棋.docx  五子棋.pptx  课程设计答辩.pptx
Gobang/: CMakeLists.txt
gobang/: 111  CMakeLists.txt  Evaluate.c  Evaluate.h  Inspire_Search.c  Inspire_Search.h  Minimax_Search.c  Minimax_Search.h  chessboard.c  search.c  五子棋实验报告.md  五子棋实验目的.pptx
gobang/gobang_c++/: CMakeLists.txt  main.cpp  mainwindow.ui  tboard.cpp  tboard.h
gobang/gobang_c++/AI/: ai.cpp  ai.h  board.cpp  board.h  comparer.cpp  comparer.h  config.h  evaluatePoint.cpp  evaluatePoint.h  logging.cpp  logging.h  negamax.cpp  negamax.h  static.cpp  static.h
gobang/gobang_python/: .gitignore  TODO.MD  main.py
gobang/gobang_python/AI/: __init__.py  ai.py  board.py  comparer.py  config.py  evaluate_point.py  negamax.py  static.py  zobrist.py
level0/: CMakeLists.txt  main.c
level0/BigNum/: BigNum.c  BigNum.h  main.c
level0/Queue/: LifoQueue.h  main.c  queue.c  queue.h
level0/bubbleSort/: CMakeLists.txt  main.c  sort.c  sort.h
level0/caculater/: LifoQueue.c  calculator.c  calculator.h  main.c
level0/hashMap/: HashMap.cpp  HashMap.h
level1/: CMakeLists.txt
level1/p01_running_letter/: 1-p01.c  main.c
level1/p02_is_prime/: is_printf.c  is_printf.h  isprime.c  isprime.h  main.c  prime.c  prime.h
level1/p03_all_primes/: euler.c  euler.h  isPrime.c  isPrime.h  isprime2.c  isprime2.h  main.c  p.c  p.h  prime.h
level1/p04_goldbach/: isprime3.c  isprime3.h  main.c
level1/p05_encrypt_decrypt/: main.c
level1/p06_hanoi/: main.c  main.cpp
level1/p07_maze/: main.c  maze.c  maze.h
level1/p08_push_boxes/: 001.txt  1.txt  2.txt  3.txt  all.h  check_win.c  game.c  game.h  gameFunction.c  gameFunction.h  gamefunction.c  gamefunction.h  level1  level1.txt  level2  level2.txt  level3  level4  level5  main.c  map1.txt  map2.txt  map3.txt  maploader.c  maploader.h  push_boxes.c  push_boxes.h  score.table  score.txt  shellControl.c  txt_to_bin.py
level1/p08_push_boxes/map/: 1.map  2.map  level1  level2  level3  level4  level5
level1/p09_linked_list/: LinkList.c  LinkList.h  README.md  linked.c  linked.h  linked_list.c  linked_list.h  main.c
level1/p10_warehouse/: README.md  data.txt  function.c  function.h  good.c  good.h  goods.h  hashmap.c  hashmap.h  main.c  shellControl.h  sqlite3.h  storage_sqlite.c  storage_sqlite.h  warehouse.c  warehouse.h  warehouse.txt
level2/: CMakeLists.txt
level2/GA/: CMakeLists.txt  ga.cpp  ga.h  main.c  main.cpp
level2/NeuralNetworks/: CNN.c  CNN.h  Full_Connected.c  Full_Connected.h  Network.c  Network.h  README.md  data_process.c  data_process.h  extract_methods.c  extract_methods.h  main.c  trans_data.py
level2/PI/: main.c  main.cpp
课程设计/: CMakeLists.txt  CNN.cpp  CNN.h  CNN.py  EasyX.cpp  Gobang.cpp  Gobang.h  GobangCNN.cpp  MCTS.c  MCTS.cpp  MCTS.h  README.md  Stack.cpp  ValuePolicyLoss.cpp  board.c  board.cpp  board.h  board_paint.cpp  board_paint.h  main.cpp  五子棋AI实验报告.docx  基于蒙特卡洛树搜索与策略价值网络的五子棋ai算法设计.pptx  基于评估函数与Alpha Beta剪枝的五子棋AI算法设计.docx  张剑玮 2023080909021实验报告 五子棋AI.pptx
课程设计/PPT/: 五子棋AI_课程设计.pptx  实验报告.doc
课程设计/gobangpp/: CMakeLists.txt  ai.h  main.cpp
课程设计/work/: MT199937.c  MT199937.h  README.md  ToDoList.md  Zobrist.c  Zobrist.h  board_control.c  board_control.h  defination.h  evaluate_func.c  evaluate_func.h  generate.c  generate.h  gui.c  hash_table.c  hash_table.h  linked_hash_value_list.c  linked_hash_value_list.h  stack_point.c  stack_point.h  test.c  test.h
课程设计/work/Former Codes/: early.c  main.c
课程设计/work/Logs/: 12.13  Layer_log A  Layer_log B  a  b  fixed_excess_nodes
